test/corpus/export_snippet.txt
==================
Export snippet
==================
@@html:<b>bold</b>@@
---

(inline_content
  (export_snippet))

==================
Export snippet latex
==================
@@latex:\textbf{hello}@@
---

(inline_content
  (export_snippet))

==================
Export snippet mixed with text
==================
before @@html:x@@ after
---

(inline_content
  (plain_text)
  (export_snippet)
  (plain_text))
