test/corpus/footnote_ref.txt
==================
Named footnote ref
==================
[fn:label]
---

(inline_content
  (footnote_ref
    (footnote_label)))

==================
Named footnote ref with definition
==================
[fn:label:definition text]
---

(inline_content
  (footnote_ref
    (footnote_label)
    (footnote_body)))

==================
Anonymous footnote ref
==================
[fn::inline definition]
---

(inline_content
  (footnote_ref
    (footnote_body)))

==================
Footnote ref mixed with text
==================
See here[fn:1] for more.
---

(inline_content
  (plain_text)
  (footnote_ref
    (footnote_label))
  (plain_text))
