test/corpus/misc.txt
==================
Statistics cookie percent
==================
[33%]
---

(inline_content
  (statistics_cookie))

==================
Statistics cookie fraction
==================
[1/3]
---

(inline_content
  (statistics_cookie))

==================
Statistics cookie empty fraction
==================
[/]
---

(inline_content
  (statistics_cookie))

==================
Superscript standalone
==================
^2
---

(inline_content
  (superscript))

==================
Superscript braced standalone
==================
^{abc}
---

(inline_content
  (superscript))

==================
Subscript braced
==================
_{abc}
---

(inline_content
  (subscript))
